--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -20,6 +20,9 @@ jobs:
           # version: 0.9.600
       
       # add software dependencies here
+      - uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: '4.2.0' # The R version to download (if necessary) and use.
 
       - name: Publish to GitHub Pages (and render)
         uses: quarto-dev/quarto-actions/publish@v2
