--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,9 +3,9 @@ project:
   
 website: 
   page-navigation: true
-  title: "Making sharable documents with Quarto" 
-  site-url: "https://openscapes.github.io/quarto-website-tutorial" 
-  repo-url: https://github.com/openscapes/quarto-website-tutorial 
+  title: "Solutions of R-Spatial course activities MEH-IIIC" 
+  site-url: "https://SGMStalin.github.io/r-spatial_activities" 
+  repo-url: https://github.com/SGMStalin/r-spatial_activities
   repo-actions: [edit, issue]
   
   page-footer:
@@ -13,26 +13,26 @@ website:
     left: "&copy; CC-By Openscapes, 2022"
     
   sidebar:
-    logo: "images/openscapes_hex.png"
+    logo: "images/MHIDRO.png"
     pinned: true
     align: center
     tools: 
       - icon: globe
-        href: https://openscapes.org
-        text: "Openscapes.org"
+        href: https://www.ucuenca.edu.ec/maestria-ecohidrologia/
+        text: "ucuenca.com"
       - icon: github
-        href: https://github.com/openscapes/quarto-website-tutorial
-        text: "Quarto website tutorial"
+        href: https://github.com/SGMStalin/r-spatial_activities
+        text: "RSpatial activities"
       - icon: twitter
-        href: https://twitter.com/openscapes
-        text: "Openscapes Twitter"         
+        href: https://twitter.com/SGMStalin
+        text: "Stalin Twitter"
 
     style: "docked"
     search: true
     collapse-level: 1
     contents:
       - href: index.qmd
-        text: Welcome
+        text: Unidad 1
       - explore.qmd
       - section: quarto-workflows/index.qmd
         contents: 
