--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -21,6 +21,10 @@ jobs:
       
       # add software dependencies here
       - uses: r-lib/actions/setup-r@v2
+        with:
+          use-public-rspm: true
+          
+      - uses: r-lib/actions/setup-renv@v2
 
       - name: Publish to GitHub Pages (and render)
         uses: quarto-dev/quarto-actions/publish@v2
