--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -7,6 +7,8 @@ name: Render and Publish
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Check out repository
         uses: actions/checkout@v2 
@@ -20,11 +22,15 @@ jobs:
           # version: 0.9.600
       
       # add software dependencies here
+      - name: Install R
       - uses: r-lib/actions/setup-r@v2
         with:
-          use-public-rspm: true
+          r-version: '4.2.0'
           
-      - uses: r-lib/actions/setup-renv@v2
+      - name: Install R Dependencies
+        uses: r-lib/actions/setup-renv@v2
+        with:
+          cache-version: 1
 
       - name: Publish to GitHub Pages (and render)
         uses: quarto-dev/quarto-actions/publish@v2
