--- a/_quarto.yml
+++ b/_quarto.yml
@@ -32,7 +32,7 @@ website:
     collapse-level: 1
     contents:
       - href: index.qmd
-        text: Unidad 1
+        text: "Unidad 1: Primeros pasos con SIG's"
       - explore.qmd
       - learning-more.qmd
       - transition-from-rmarkdown.qmd
